b=390668, crash in gfxASurface::GetType (_moz_cairo_scaled_font_status and others), often using drawWindow